[package]
name = "cron-parser"
version = "0.11.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Library for parsing cron expressions with timezone support."
documentation = "https://docs.rs/cron-parser/latest/cron_parser/"
homepage = "https://docs.rs/cron-parser"
repository = "https://github.com/nbari/cron-parser"
readme = "README.md"
keywords = ["cron", "crontab", "parser"]
categories = ["parsing", "date-and-time"]
license = "BSD-3-Clause"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false }

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
criterion = "0.7"

[[bench]]
name = "parse_benchmark"
harness = false
