[package]
name = "cron-parser"
version = "0.11.1"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Library for parsing cron expressions with timezone support."
documentation = "https://docs.rs/cron-parser/latest/cron_parser/"
homepage = "https://docs.rs/cron-parser"
repository = "https://github.com/nbari/cron-parser"
readme = "README.md"
keywords = ["cron", "crontab", "parser"]
categories = ["parsing", "date-and-time"]
license = "BSD-3-Clause"
edition = "2024"

[lints.rust]
warnings = "deny"

[lints.clippy]
# Allow unstable/opinionated lints (lower priority so individual lints can override)
nursery = { level = "allow", priority = -1 }

# Enforce pedantic lints
pedantic = "deny"

# Core lint groups
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# Safety-critical lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"

# Performance + memory reliability
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[dependencies]
chrono = { version = "0.4", default-features = false }

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.10"
criterion = "0.8"

[[bench]]
name = "parse_benchmark"
harness = false
